test/zinc_source/compile_errors/concurrency/10_select_close_aware_arity.zn
// expected-error: close-aware select receive requires exactly two bindings

fn main() {
    values = chan()
    select {
        case a, b, c = <-values {
            print("nope")
        }
    }
}
